ajout commentaire sur liens morts

--- a/presentation.tex
+++ b/presentation.tex
@@ -64,6 +64,7 @@
 		\begin{itemize}
 			\onslide<1>\item Qu'est-ce que \alert{la sécurité} vous évoque ?
 			\onslide<2->\item \href{http://www.informationisbeautiful.net/visualizations/worlds-biggest-data-breaches-hacks/}{{\color{blue}Worlds biggest data breaches hacks}}
+			% Attention, les liens suivants sont morts, d'ailleurs parce que le site a à nouveau été hacké
 			\onslide<3->\item \href{http://annelaurejacquart.com/2013/11/le-site-est-mort-vive-le-site/} {{\color{blue}Le site est mort, vive le site !}} et \href{https://www.mavenhosting.com/clients/announcements.php?id=8}{{\color{blue}mavenhosting}}
 			\onslide<4->\item \href{http://reflets.info/a-propos-des-journees-portes-ouvertes-du-groupe-ump-au-senat/}{{\color{blue}Journée portes ouvertes du groupe UMP au Sénat}}
 		\end{itemize}
