correction url heg-logo

--- a/presentation.tex
+++ b/presentation.tex
@@ -32,7 +32,7 @@
 \institute[Haute École de Gestion de Genève] % (facultatif mais généralement nécessaire)
 {Haute École de Gestion de Genève\\Filière Information Documentaire}
 \titlegraphic{
-\includegraphics[scale=.2]{logo_heg_mo.jpg}\hspace{.2cm}
+\includegraphics[scale=.2]{heg-logo.jpg}\hspace{.2cm}
 }
 
 \date[2014]{2014}
