correction d'un \end{frame} manquant

--- a/presentation.tex
+++ b/presentation.tex
@@ -463,6 +463,7 @@
 			\end{exampleblock}
 			\onslide<2>Contexte des bibliothèques ? \\
 			\onslide<3>\href{https://id-libre.org/shaarli/?aUbIGw}{{\color{blue}Adobe Digital Edition 4.0}}
+		\end{frame}
 		\begin{frame}{Transactions}
 			\begin{exampleblock}{Authentification}
 				Les acteurs doivent être identifiés et authentifiés, afin d'assurer la loyauté des transactions.
