correction mineure : permanence des points dans confidentialité

--- a/presentation.tex
+++ b/presentation.tex
@@ -461,8 +461,8 @@
 			\onslide<1->\begin{exampleblock}{Confidentialité}
 				L'information ne doit être accessible et diffusée que par les personnes autorisées.
 			\end{exampleblock}
-			\onslide<2>Contexte des bibliothèques ? \\
-			\onslide<3>\href{https://id-libre.org/shaarli/?aUbIGw}{{\color{blue}Adobe Digital Edition 4.0}}
+			\onslide<2->Contexte des bibliothèques ? \\
+			\onslide<3->\href{https://id-libre.org/shaarli/?aUbIGw}{{\color{blue}Adobe Digital Edition 4.0}}
 		\end{frame}
 		\begin{frame}{Transactions}
 			\begin{exampleblock}{Authentification}
