Ajout illustration xkcd

--- a/presentation.tex
+++ b/presentation.tex
@@ -133,14 +133,21 @@
 			\begin{exampleblock}{Question}
 				Que peut-on faire en accédant à votre ordinateur personnel, avec votre session ouverte ?
 			\end{exampleblock}
-			\onslide<2>
-			\begin{itemize}
-				\item Accéder aux données
-				\item Aux mots de passes du navigateur
-				\item $\rightarrow$ Aux comptes en lignes
-				\item e-mail
-				\item Droits d'administration (installation...)
-			\end{itemize}
+			\begin{columns}
+				\begin{column}
+					\onslide<2->
+					\begin{itemize}
+						\item Accéder aux données
+						\item Aux mots de passes du navigateur
+						\item $\rightarrow$ Aux comptes en lignes
+						\item e-mail
+						\onslide<3-> \item \st{Droits d'administration (installation...)}
+					\end{itemize}
+				\end{column}
+				\begin{column}
+					\onslide<4-> \includegraphics{xkcd-1200-authorization.png}
+				\end{column}
+			\end{columns}
 		\end{frame}
 		
 	\subsection{Mot de passe}	
