--- a/presentation.tex
+++ b/presentation.tex
@@ -134,8 +134,7 @@
 				Que peut-on faire en accédant à votre ordinateur personnel, avec votre session ouverte ?
 			\end{exampleblock}
 			\begin{columns}
-				\begin{column}
-					\onslide<2->
+				\onslide<2->\begin{column}[c]{5cm}
 					\begin{itemize}
 						\item Accéder aux données
 						\item Aux mots de passes du navigateur
@@ -144,8 +143,8 @@
 						\onslide<3-> \item \st{Droits d'administration (installation...)}
 					\end{itemize}
 				\end{column}
-				\begin{column}
-					\onslide<4-> \includegraphics{xkcd-1200-authorization.png}
+				\onslide<4-> \begin{column}[c]{5cm}
+					\includegraphics{xkcd-1200-authorization.png}
 				\end{column}
 			\end{columns}
 		\end{frame}
