correction taille xkcd.png

--- a/presentation.tex
+++ b/presentation.tex
@@ -144,7 +144,7 @@
 					\end{itemize}
 				\end{column}
 				\onslide<4-> \begin{column}[c]{5cm}
-					\includegraphics{xkcd-1200-authorization.png}
+					\includegraphics[scale 0.25]{xkcd-1200-authorization.png}
 				\end{column}
 			\end{columns}
 		\end{frame}
