--- a/presentation.tex
+++ b/presentation.tex
@@ -133,20 +133,14 @@
 			\begin{exampleblock}{Question}
 				Que peut-on faire en accédant à votre ordinateur personnel, avec votre session ouverte ?
 			\end{exampleblock}
-			\begin{columns}
-				\onslide<2->\begin{column}[c]{5cm}
-					\begin{itemize}
-						\item Accéder aux données
-						\item Aux mots de passes du navigateur
-						\item $\rightarrow$ Aux comptes en lignes
-						\item e-mail
-						\onslide<3-> \item \st{Droits d'administration (installation...)}
-					\end{itemize}
-				\end{column}
-				\onslide<4-> \begin{column}[c]{5cm}
-					\includegraphics[scale 0.25]{xkcd-1200-authorization.png}
-				\end{column}
-			\end{columns}
+			\onslide<2>
+				\begin{itemize}
+					\item Accéder aux données
+					\item Aux mots de passes du navigateur
+					\item $\rightarrow$ Aux comptes en lignes
+					\item e-mail
+					\onslide<3-> \item \st{Droits d'administration (installation...)}
+				\end{itemize}
 		\end{frame}
 		
 	\subsection{Mot de passe}	
